--- a/src/komfort.html
+++ b/src/komfort.html
@@ -31,5 +31,23 @@
             </div>
         </div>
      </header>
+     <!-- main -->
+      <main>
+        <!-- Поможем -->
+         <div class="flex justify-between max-w-[1200px] m-auto mt-[50px]">
+            <div>
+                <h1 class="text-[56px] font-[700]">Поможем</h1>
+                <h1 class="text-[56px] font-[700]">навести порядок</h1>
+                <h1 class="text-[56px] font-[700]">в компании</h1>
+                <p class="text-[36px] mt-[30px]">Внедрение CRM за 2 недели.</p>
+                <p class="text-[36px]">Работаем по всей России.</p>
+                <input type="text" placeholder="Название компании" class="w-[332px] border-[1px] border-black px-[10px] mt-[30px]">
+                <input type="tel" placeholder="Телефон*" class="w-[332px] border-[1px] border-black px-[10px] ml-[19px]">
+                <button class="bg-[#3D68E1] text-white w-[688px] mt-[30px] p-[10px]">ЗАКАЗАТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</button>
+                <p class="pl-[160px]">Мы никогда не передаём Ваши данные третьим лицам</p>
+            </div>
+            <div><img src="image 15.png" alt="" class="mt-[150px]"></div>
+         </div>
+      </main>
 </body>
 </html>
