--- a/src/komfort.html
+++ b/src/komfort.html
@@ -48,6 +48,22 @@
             </div>
             <div><img src="image 15.png" alt="" class="mt-[150px]"></div>
          </div>
+         <!-- Внедрение -->
+          <div class="bg-[#F5F7F8] py-[40px] mt-[100px]">
+            <h1 class="text-[30px] text-center">Внедрение CRM позволит Вашей компании </h1>
+            <div class="flex justify-center gap-2 mt-[3px]">
+                <button class="text-[30px] bg-[#99B5EB] px-[10px] rounded-[30px]">связываться</button>
+                <span class="text-[30px]">с клиентом вовремя,</span>
+            </div>
+            <div class="flex justify-center gap-2 mt-[3px]">
+                <button class="text-[30px] bg-[#99C2A5] px-[10px] rounded-[30px]">сохранять</button>
+                <span class="text-[30px]">всю информацию о заказах, </span>
+            </div>
+            <div class="flex justify-center gap-2 mt-[3px]">
+                <button class="text-[30px] bg-[#F9E78A] px-[10px] rounded-[30px]">анализировать</button>
+                <span class="text-[30px]">показатели продаж.</span>
+            </div>
+          </div>
       </main>
 </body>
 </html>
