--- a/src/komfort.html
+++ b/src/komfort.html
@@ -64,6 +64,16 @@
                 <span class="text-[30px]">показатели продаж.</span>
             </div>
           </div>
+          <!-- Объединение  -->
+           <div class="bg-[#99B5EB] py-[40px]">
+            <div class=" m-auto max-w-[1200px] ">
+            <h1 class="text-[46px] text-center font-[400]">Объединение всех каналов </h1>
+            <h1 class="text-[46px] text-center font-[400]">связи в одной системе</h1>
+            <p class="text-[30px] text-center mt-[20px]">Подключите мессенджеры, соцсети, Авито, сайты, чаты, </p>
+            <p class="text-[30px] text-center ">и общайтесь с клиентами в режиме одного окна.</p>
+            <img src="CRM+sources.png" alt="" class="m-auto mt-[30px]">
+            </div>
+           </div>
       </main>
 </body>
 </html>
