--- a/src/komfort.html
+++ b/src/komfort.html
@@ -74,6 +74,16 @@
             <img src="CRM+sources.png" alt="" class="m-auto mt-[30px]">
             </div>
            </div>
+           <!-- Сотрудник -->
+            <div class="bg-[#99C2A5] py-[40px]">
+                <div class="max-w-[1200px] m-auto">
+                    <h1 class="text-[48px] text-center font-[400]">Сотрудник уходит,</h1>
+                    <h1 class="text-[48px] text-center font-[400]">данные остаются</h1>
+                    <p class="text-[30px] text-center mt-[20px]">Вся информация о клиенте и его заказах сохраняется в </p>
+                    <p class="text-[30px] text-center ">CRM</p>
+                    <img src="Image.png" alt="" class="m-auto mt-[30px]">
+                </div>
+            </div>
       </main>
 </body>
 </html>
