--- a/src/komfort.html
+++ b/src/komfort.html
@@ -81,9 +81,18 @@
                     <h1 class="text-[48px] text-center font-[400]">данные остаются</h1>
                     <p class="text-[30px] text-center mt-[20px]">Вся информация о клиенте и его заказах сохраняется в </p>
                     <p class="text-[30px] text-center ">CRM</p>
-                    <img src="Image.png" alt="" class="m-auto mt-[30px]">
+                    <img src="p1.png" alt="" class="m-auto mt-[30px]">
                 </div>
             </div>
+            <!-- Принимайте  -->
+             <div class="bg-[#f9e78a] py-[40px]">
+                <div class="max-w-[1200px] m-auto">
+                    <h1 class="text-[48px] text-center font-[400]">Принимайте решения на </h1>
+                    <h1 class="text-[48px] text-center font-[400]">основе данных</h1>
+                    <p class="text-[30px] text-center font-[400] mt-[20px]" >Отчёты по продажам, по менеджерам, по клиентам.</p>
+                    <img src="p2.png" alt="" class="m-auto mt-[30px]">
+                </div>
+             </div>
       </main>
 </body>
 </html>
