--- a/src/komfort.html
+++ b/src/komfort.html
@@ -93,6 +93,62 @@
                     <img src="p2.png" alt="" class="m-auto mt-[30px]">
                 </div>
              </div>
+             <!-- Отзывы -->
+              <div class="max-w-[1200px] m-auto ">
+                <h1 class="text-[48px] font-[400] text-center">Отзывы</h1>
+                <p class="text-[30px] text-center">Более 15 000 000 компаний по всему миру уже </p>
+                <p class="text-[30px] text-center">используют CRM-системы.</p>
+                <div class="flex justify-between mt-[50px]">
+                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px]">
+                        <div class="flex gap-5">
+                            <div><img src="Avatar.png" alt=""></div>
+                            <div>
+                                <h1>Михаил Кириченко</h1>
+                                <p>Just look</p>
+                            </div>
+                        </div>
+                        <p class="text-[16px]">“Отдел продаж начал отмечать в     </p>
+                        <p class="text-[16px]">CRM все действия и результаты</p>
+                        <p class="text-[16px]">работы с клиентами – звонки,</p>
+                        <p class="text-[16px]">письма, встречи и их итоги, ход</p>
+                        <p class="text-[16px]">сделок, их завершение, выставление</p>
+                        <p class="text-[16px]">счетов – мы, наконец-то, начали </p>
+                        <p class="text-[16px]">учитывать все.”</p>
+                    </div>
+                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px]">
+                        <div class="flex gap-5">
+                            <div><img src="Avatar.png" alt=""></div>
+                            <div>
+                                <h1>Михаил Кириченко</h1>
+                                <p>Just look</p>
+                            </div>
+                        </div>
+                        <p class="text-[16px]">“Отдел продаж начал отмечать в     </p>
+                        <p class="text-[16px]">CRM все действия и результаты</p>
+                        <p class="text-[16px]">работы с клиентами – звонки,</p>
+                        <p class="text-[16px]">письма, встречи и их итоги, ход</p>
+                        <p class="text-[16px]">сделок, их завершение, выставление</p>
+                        <p class="text-[16px]">счетов – мы, наконец-то, начали </p>
+                        <p class="text-[16px]">учитывать все.”</p>
+                    </div>
+                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px]">
+                        <div class="flex gap-5">
+                            <div><img src="Avatar.png" alt=""></div>
+                            <div>
+                                <h1>Михаил Кириченко</h1>
+                                <p>Just look</p>
+                            </div>
+                        </div>
+                        <p class="text-[16px]">“Отдел продаж начал отмечать в     </p>
+                        <p class="text-[16px]">CRM все действия и результаты</p>
+                        <p class="text-[16px]">работы с клиентами – звонки,</p>
+                        <p class="text-[16px]">письма, встречи и их итоги, ход</p>
+                        <p class="text-[16px]">сделок, их завершение, выставление</p>
+                        <p class="text-[16px]">счетов – мы, наконец-то, начали </p>
+                        <p class="text-[16px]">учитывать все.”</p>
+                    </div>
+                </div>
+              </div>
       </main>
 </body>
 </html>
