--- a/src/komfort.html
+++ b/src/komfort.html
@@ -149,6 +149,32 @@
                     </div>
                 </div>
               </div>
+              <!-- Частые вопросы -->
+               <div class="bg-[#f5f7f8] py-[40px] mt-[50px]">
+                <div class="max-w-[1200px] m-auto">
+                    <h1 class="text-[48px] text-center ">Частые вопросы</h1>
+                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                        <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
+                    </div>
+                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                        <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
+                    </div>
+                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                        <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
+                    </div>
+                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                        <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
+                    </div>
+                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                        <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
+                    </div>
+                </div>
+               </div>
       </main>
 </body>
 </html>
