Заказать настройку CRM

--- a/src/komfort.html
+++ b/src/komfort.html
@@ -175,6 +175,19 @@
                     </div>
                 </div>
                </div>
+               <!-- Заказать настройку CRM -->
+                <div class="max-w-[1200px] m-auto py-[40px]">
+                    <h1 class="text-[48px] text-center">Заказать настройку CRM</h1>
+                    <p class="text-[30px] text-center mt-[20px]">Оставьте заявку,</p>
+                    <p class="text-[30px] text-center ">и мы перезвоним Вам в течение 10 минут.</p>
+                    <div class="w-[688px] m-auto mt-[30px]">
+                    <input type="text" placeholder="Название компании" class="w-[332px] border-[1px] border-black px-[10px] mt-[30px]">
+                <input type="tel" placeholder="Телефон*" class="w-[332px] border-[1px] border-black px-[10px] ml-[19px]">
+                <button class="bg-[#3D68E1] text-white w-[688px] mt-[30px] p-[10px]">ЗАКАЗАТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</button>
+                <p class="text-[14px] text-center">Мы никогда не передаём Ваши данные третьим лицам</p>
+                </div>
+                <p class="text-[14px] text-center mt-[30px]">© 2015-2024 ООО “ИТ-Комфорт” ИНН: 5906133680 ОГРН: 1155958105962</p>
+                </div>
       </main>
 </body>
 </html>
