--- a/src/komfort.html
+++ b/src/komfort.html
@@ -6,12 +6,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body>
+<body class="lg:p-0 p-[10px]">
     <!-- header -->
      <header>
         <div class="max-w-[1200px] m-auto flex justify-between">
             <div><img src="Logo (10).png" alt=""></div>
-            <div class="flex gap-5">
+            <div class="lg:flex gap-5 hidden">
             <div class="border-r-[1px] border-[#C4C4C4] pr-[40px]">
                 <p class="text-[#6b6b6b]">ВРЕМЯ РАБОТЫ</p>
                 <p class="font-[700]">Пн-Вс 9:00-21:00</p>
@@ -29,27 +29,28 @@
                 <p class="font-[700]">+7(342)243-02-96</p>
             </div>
             </div>
+            <div class="lg:hidden"><img src="Chevron.png" alt=""></div>
         </div>
      </header>
      <!-- main -->
       <main>
         <!-- Поможем -->
-         <div class="flex justify-between max-w-[1200px] m-auto mt-[50px]">
+         <div class="flex justify-between max-w-[1200px] m-auto mt-[50px] flex-col lg:flex-row">
             <div>
-                <h1 class="text-[56px] font-[700]">Поможем</h1>
-                <h1 class="text-[56px] font-[700]">навести порядок</h1>
-                <h1 class="text-[56px] font-[700]">в компании</h1>
-                <p class="text-[36px] mt-[30px]">Внедрение CRM за 2 недели.</p>
-                <p class="text-[36px]">Работаем по всей России.</p>
-                <input type="text" placeholder="Название компании" class="w-[332px] border-[1px] border-black px-[10px] mt-[30px]">
-                <input type="tel" placeholder="Телефон*" class="w-[332px] border-[1px] border-black px-[10px] ml-[19px]">
-                <button class="bg-[#3D68E1] text-white w-[688px] mt-[30px] p-[10px]">ЗАКАЗАТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</button>
-                <p class="pl-[160px]">Мы никогда не передаём Ваши данные третьим лицам</p>
+                <h1 class="lg:text-[56px] text-[31px] font-[700]">Поможем</h1>
+                <h1 class="lg:text-[56px] text-[31px] font-[700]">навести порядок</h1>
+                <h1 class="lg:text-[56px] text-[31px] font-[700]">в компании</h1>
+                <p class="lg:text-[36px] text-[16px] mt-[30px]">Внедрение CRM за 2 недели.</p>
+                <p class="lg:text-[36px] text-[16px]">Работаем по всей России.</p>
+                <input type="text" placeholder="Название компании" class="lg:w-[332px] w-[328px] border-[1px] border-black px-[10px] mt-[30px] lg:inline block">
+                <input type="tel" placeholder="Телефон*" class="lg:w-[332px] w-[328px] border-[1px] border-black px-[10px] lg:ml-[19px] ml-0 mt-[20px]">
+                <button class="bg-[#3D68E1] text-white lg:w-[688px] w-[328px] mt-[30px] p-[10px]">ЗАКАЗАТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</button>
+                <p class="lg:pl-[160px] text-[12px] lg:text-[14px]">Мы никогда не передаём Ваши данные третьим лицам</p>
             </div>
-            <div><img src="image 15.png" alt="" class="mt-[150px]"></div>
+            <div class="lg:inline hidden"><img src="image 15.png" alt="" class="mt-[150px]"></div>
          </div>
          <!-- Внедрение -->
-          <div class="bg-[#F5F7F8] py-[40px] mt-[100px]">
+          <div class="bg-[#F5F7F8] py-[40px] mt-[100px] ">
             <h1 class="text-[30px] text-center">Внедрение CRM позволит Вашей компании </h1>
             <div class="flex justify-center gap-2 mt-[3px]">
                 <button class="text-[30px] bg-[#99B5EB] px-[10px] rounded-[30px]">связываться</button>
@@ -67,39 +68,39 @@
           <!-- Объединение  -->
            <div class="bg-[#99B5EB] py-[40px]">
             <div class=" m-auto max-w-[1200px] ">
-            <h1 class="text-[46px] text-center font-[400]">Объединение всех каналов </h1>
-            <h1 class="text-[46px] text-center font-[400]">связи в одной системе</h1>
-            <p class="text-[30px] text-center mt-[20px]">Подключите мессенджеры, соцсети, Авито, сайты, чаты, </p>
-            <p class="text-[30px] text-center ">и общайтесь с клиентами в режиме одного окна.</p>
+            <h1 class="lg:text-[46px] text-[28px] text-center font-[400]">Объединение всех каналов </h1>
+            <h1 class="lg:text-[46px] text-[28px] text-center font-[400]">связи в одной системе</h1>
+            <p class="lg:text-[30px] text-[16px] text-center mt-[20px]">Подключите мессенджеры, соцсети, Авито, сайты, чаты, </p>
+            <p class="lg:text-[30px] text-[16px] text-center ">и общайтесь с клиентами в режиме одного окна.</p>
             <img src="CRM+sources.png" alt="" class="m-auto mt-[30px]">
             </div>
            </div>
            <!-- Сотрудник -->
             <div class="bg-[#99C2A5] py-[40px]">
                 <div class="max-w-[1200px] m-auto">
-                    <h1 class="text-[48px] text-center font-[400]">Сотрудник уходит,</h1>
-                    <h1 class="text-[48px] text-center font-[400]">данные остаются</h1>
-                    <p class="text-[30px] text-center mt-[20px]">Вся информация о клиенте и его заказах сохраняется в </p>
-                    <p class="text-[30px] text-center ">CRM</p>
+                    <h1 class="lg:text-[48px] text-[28px] text-center font-[400]">Сотрудник уходит,</h1>
+                    <h1 class="lg:text-[48px] text-[28px] text-center font-[400]">данные остаются</h1>
+                    <p class="lg:text-[30px] text-[16px] text-center mt-[20px]">Вся информация о клиенте и его заказах сохраняется в </p>
+                    <p class="lg:text-[30px] text-[16px] text-center ">CRM</p>
                     <img src="p1.png" alt="" class="m-auto mt-[30px]">
                 </div>
             </div>
             <!-- Принимайте  -->
              <div class="bg-[#f9e78a] py-[40px]">
                 <div class="max-w-[1200px] m-auto">
-                    <h1 class="text-[48px] text-center font-[400]">Принимайте решения на </h1>
-                    <h1 class="text-[48px] text-center font-[400]">основе данных</h1>
-                    <p class="text-[30px] text-center font-[400] mt-[20px]" >Отчёты по продажам, по менеджерам, по клиентам.</p>
+                    <h1 class="lg:text-[48px] text-[28px] text-center font-[400]">Принимайте решения на </h1>
+                    <h1 class="lg:text-[48px] text-[28px] text-center font-[400]">основе данных</h1>
+                    <p class="lg:text-[30px] text-[16px] text-center font-[400] mt-[20px]" >Отчёты по продажам, по менеджерам, по клиентам.</p>
                     <img src="p2.png" alt="" class="m-auto mt-[30px]">
                 </div>
              </div>
              <!-- Отзывы -->
               <div class="max-w-[1200px] m-auto ">
-                <h1 class="text-[48px] font-[400] text-center">Отзывы</h1>
-                <p class="text-[30px] text-center">Более 15 000 000 компаний по всему миру уже </p>
-                <p class="text-[30px] text-center">используют CRM-системы.</p>
-                <div class="flex justify-between mt-[50px]">
-                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px]">
+                <h1 class="lg:text-[48px] text-[28px] font-[400] text-center">Отзывы</h1>
+                <p class=" lg:text-[30px] text-[16px] text-center">Более 15 000 000 компаний по всему миру уже </p>
+                <p class=" lg:text-[30px] text-[16px] text-center">используют CRM-системы.</p>
+                <div class="flex justify-between mt-[50px] flex-col lg:flex-row gap-5">
+                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px] m-auto lg:m-0">
                         <div class="flex gap-5">
                             <div><img src="Avatar.png" alt=""></div>
                             <div>
@@ -115,7 +116,7 @@
                         <p class="text-[16px]">счетов – мы, наконец-то, начали </p>
                         <p class="text-[16px]">учитывать все.”</p>
                     </div>
-                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px]">
+                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px] m-auto lg:m-0">
                         <div class="flex gap-5">
                             <div><img src="Avatar.png" alt=""></div>
                             <div>
@@ -131,7 +132,7 @@
                         <p class="text-[16px]">счетов – мы, наконец-то, начали </p>
                         <p class="text-[16px]">учитывать все.”</p>
                     </div>
-                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px]">
+                    <div class="border-[#bdbdbd] border-[1px] w-[328px] rounded-[20px] py-[30px] pl-[10px] m-auto lg:m-0 ">
                         <div class="flex gap-5">
                             <div><img src="Avatar.png" alt=""></div>
                             <div>
@@ -152,39 +153,41 @@
               <!-- Частые вопросы -->
                <div class="bg-[#f5f7f8] py-[40px] mt-[50px]">
                 <div class="max-w-[1200px] m-auto">
-                    <h1 class="text-[48px] text-center ">Частые вопросы</h1>
-                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
-                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                    <h1 class="lg:text-[48px] text-[28px] text-center ">Частые вопросы</h1>
+                    <div class="flex justify-between lg:w-[848px] w-[328px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="lg:text-[30px] text-[20px] font-[600]">Сколько это стоит?</p>
                         <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
                     </div>
-                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
-                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                    <div class="flex justify-between lg:w-[848px] w-[328px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="lg:text-[30px] text-[20px] font-[600]">Сколько это стоит?</p>
                         <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
                     </div>
-                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
-                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                    <div class="flex justify-between lg:w-[848px] w-[328px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="lg:text-[30px] text-[20px] font-[600]">Сколько это стоит?</p>
                         <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
                     </div>
-                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
-                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                    <div class="flex justify-between lg:w-[848px] w-[328px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="lg:text-[30px] text-[20px] font-[600]">Сколько это стоит?</p>
                         <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
                     </div>
-                    <div class="flex justify-between w-[848px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
-                        <p class="text-[30px] font-[600]">Сколько это стоит?</p>
+                    <div class="flex justify-between lg:w-[848px] w-[328px] m-auto border-b-[1px] border-[#AEAEAE] pb-[10px] mt-[20px]">
+                        <p class="lg:text-[30px] text-[20px] font-[600]">Сколько это стоит?</p>
                         <img src="Plus.png" alt="" class="w-[32px] h-[30px]">
                     </div>
+                     
                 </div>
                </div>
                <!-- Заказать настройку CRM -->
                 <div class="max-w-[1200px] m-auto py-[40px]">
-                    <h1 class="text-[48px] text-center">Заказать настройку CRM</h1>
-                    <p class="text-[30px] text-center mt-[20px]">Оставьте заявку,</p>
-                    <p class="text-[30px] text-center ">и мы перезвоним Вам в течение 10 минут.</p>
-                    <div class="w-[688px] m-auto mt-[30px]">
-                    <input type="text" placeholder="Название компании" class="w-[332px] border-[1px] border-black px-[10px] mt-[30px]">
-                <input type="tel" placeholder="Телефон*" class="w-[332px] border-[1px] border-black px-[10px] ml-[19px]">
-                <button class="bg-[#3D68E1] text-white w-[688px] mt-[30px] p-[10px]">ЗАКАЗАТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</button>
-                <p class="text-[14px] text-center">Мы никогда не передаём Ваши данные третьим лицам</p>
+                    <h1 class="lg:text-[48px] text-[31px] text-center">Заказать настройку CRM</h1>
+                    <p class="lg:text-[30px] text-[16px] text-center mt-[20px]">Оставьте заявку,</p>
+                    <p class="lg:text-[30px] text-[16px] text-center ">и мы перезвоним Вам в течение 10 минут.</p>
+                    <div class="w-[328px] m-auto mt-[30px]">
+                     
+                <input type="text" placeholder="Название компании" class="lg:w-[332px] w-[328px] border-[1px] border-black px-[10px] mt-[30px] lg:inline block">
+                <input type="tel" placeholder="Телефон*" class="lg:w-[332px] w-[328px] border-[1px] border-black px-[10px] lg:ml-[19px] ml-0 mt-[20px]">
+                <button class="bg-[#3D68E1] text-white lg:w-[688px] w-[328px] mt-[30px] p-[10px]">ЗАКАЗАТЬ БЕСПЛАТНУЮ КОНСУЛЬТАЦИЮ</button>
+                <p class="lg:pl-[160px] text-[12px] lg:text-[14px]">Мы никогда не передаём Ваши данные третьим лицам</p>
                 </div>
                 <p class="text-[14px] text-center mt-[30px]">© 2015-2024 ООО “ИТ-Комфорт” ИНН: 5906133680 ОГРН: 1155958105962</p>
                 </div>
